+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.6 alpha 1?
=================================

*Release date: XX-XXX-2008*

Core and builtins
-----------------

- Issue #1726: Remove Python/atof.c from PCBuild/pythoncore.vcproj

- Removed PCbuild8/ directory and added a new build directory for VS 2005
  based on the VS 2008 build directory to PC/VS8.0. The script 
  PCbuild/vs8to9.py was added to sync changes from PCbuild to PC/VS8.0.

- Moved PCbuild/ directory for VS 2003 to PC/VS7.1 and renamed PCBuild9/
  directory to PCBuild/.

- Issue #1629: Renamed Py_Size, Py_Type and Py_Refcnt to Py_SIZE, Py_TYPE
  and Py_REFCNT.

- Issue #1635: Platform independent creation and representation of NaN
  and INF. float("nan"), float("inf") and float("-inf") now work on every
  platform with IEEE 754 semantics.

- Added case insensitive comparsion methods ``PyOS_stricmp(char*, char*)``
  and ``PyOS_strnicmp(char*, char*, Py_ssize_t)``.

- Compiler now generates simpler and faster code for dictionary literals.
  The oparg for BUILD_MAP now indicates an estimated dictionary size.
  There is a new opcode, STORE_MAP, for adding entries to the dictionary.

- Issue #1638: %zd configure test fails on Linux

- Issue #1620: New property decorator syntax was modifying the decorator
  in place instead of creating a new decorator object.

- Issue #1580: New free format floating point representation based on
  "Floating-Point Printer Sample Code", by Robert G. Burger. For example
  repr(11./5) now returns '2.2' instead of '2.2000000000000002'.

- Issue #1538: Avoid copying string in split/rsplit if the split
  char is not found.

- Issue #1553: An erroneous __length_hint__ can make list() raise a
  SystemError.

- PEP 366: Allow explicit relative imports when executing modules
  inside packages with the -m switch via a new module level
  __package__ attribute.
